wk_taa_taaqa/src/objects/Solution.object
<CustomObject>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Indirect (STG)</fullName>
                </value>
                <value>
                    <fullName>R&amp;L</fullName>
                </value>
                <value>
                    <fullName>Software (Corporate)</fullName>
                </value>
                <value>
                    <fullName>Software (CPA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Orgin__c</fullName>
        <formula>TEXT(Case.Origin)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Orgin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Audit and Accounting</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Professional Client Services (implementation, training, conversion)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active Data</fullName>
                </value>
                <value>
                    <fullName>AnswerConnect</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>Autoflow</fullName>
                </value>
                <value>
                    <fullName>Axcess Document</fullName>
                </value>
                <value>
                    <fullName>Axcess Practice</fullName>
                </value>
                <value>
                    <fullName>Axcess Tax</fullName>
                </value>
                <value>
                    <fullName>Ax - Doc</fullName>
                </value>
                <value>
                    <fullName>Ax - Other</fullName>
                </value>
                <value>
                    <fullName>Ax - Portal</fullName>
                </value>
                <value>
                    <fullName>Ax - Practice</fullName>
                </value>
                <value>
                    <fullName>Ax Suite</fullName>
                </value>
                <value>
                    <fullName>Ax - Tax</fullName>
                </value>
                <value>
                    <fullName>Ax - WS</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Document</fullName>
                </value>
                <value>
                    <fullName>Client Relate</fullName>
                </value>
                <value>
                    <fullName>Code Connect</fullName>
                </value>
                <value>
                    <fullName>Compliance Services</fullName>
                </value>
                <value>
                    <fullName>Corp - Direct</fullName>
                </value>
                <value>
                    <fullName>Corp - Indirect</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Eng &amp; KC</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Intelliconnect</fullName>
                </value>
                <value>
                    <fullName>Knowledge Coach</fullName>
                </value>
                <value>
                    <fullName>Multi State Tax</fullName>
                </value>
                <value>
                    <fullName>PDFlyer</fullName>
                </value>
                <value>
                    <fullName>Pfx - Doc</fullName>
                </value>
                <value>
                    <fullName>PFX Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Client_Services__c</fullName>
        <label>Topics</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Audit and Accounting</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Document</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Deal Coaching</fullName>
                </value>
                <value>
                    <fullName>Help with Sales Process</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Order Validation and Scheduling</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Product Functionality</fullName>
                </value>
                <value>
                    <fullName>Professional Service Calculator</fullName>
                </value>
                <value>
                    <fullName>ProServ Conversions</fullName>
                </value>
                <value>
                    <fullName>Request for assistance on a sales call</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service Recommendations</fullName>
                </value>
                <value>
                    <fullName>Statements of Work</fullName>
                </value>
                <value>
                    <fullName>System Requirements</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Tax Conversions</fullName>
                </value>
                <value>
                    <fullName>Technical Requirements</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unreviewed Solutions</label>
    </listViews>
</CustomObject>